--- a/app/views/user_keys/own_user_keys.html.erb
+++ b/app/views/user_keys/own_user_keys.html.erb
@@ -11,5 +11,4 @@
 
 <br>
 
-<%= link_to 'Apply for an Express key', express_app_path, class: "big-button" %>
-<%= link_to 'Apply for long-term or more specialized access', new_user_key_path, class: "big-button" %>
+<%= link_to 'Apply for a new key', new_user_key_path, class: "big-button" %>
