--- a/app/views/user_keys/show_partials/_express_app.html.erb
+++ b/app/views/user_keys/show_partials/_express_app.html.erb
@@ -3,15 +3,12 @@
 <h3>Express Application</h3>
 
 <p>
-  <b>Requester Type:</b>
-  <span><%= I18n.t "requester_types.#{ea.requester_type}.title" %></span>
-</p>
-<p>
   <b>Project Description:</b>
   <span><%= ea.reasoning %></span>
 </p>
+
 <p>
-  <label>Project End Date</label>
+  <b>Project End Date</b>
   <span><%#= @user_key.time_expired.strftime("%e %b %Y %H:%M:%S%p") %></span>
 </p>
 
