Separate static pages for long term and express apps. Put admin panel in home controller. Link to static pages from admin panel.

--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -1,7 +1,7 @@
 <%# The instructions Page's content is rendered here. %>
 <h4>Instructions for Applying</h4>
 
-<%= markdown(Page.find_or_create("instructions").message) %>
+<%= markdown(Page.find_or_create(@user_key.express_app ? "x-instructions" : "lt-instructions").message) %>
 
 <br/>
 
