--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -61,7 +61,7 @@
       <%# Only admin users can look at the settings page %>
       <% if @current_user.role? :admin %>
         <li id="settings" class="<%= 'active' if cName == 'questions' %>">
-          <%= link_to questions_path do %>
+          <%= link_to admin_path do %>
             <i class="show-for-medium-up fi-widget"></i>
             <div class="show-for-small-only">Settings</div>
           <% end %>
