Better tip on how to use Filter Name

--- a/app/views/filters/_form.html.erb
+++ b/app/views/filters/_form.html.erb
@@ -22,7 +22,7 @@
     <div class="s3">
       <%= f.label :filter_name, class: "prefix" do %>
         Filter Name
-        <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="The column to which the filter will be applied.">
+        <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="Choose one of the available filters. Hint: You may want to refresh this list against CollegiateLink's API: in the Admin Panel click 'Sync Columns'.">
           ?
         </span>
       <% end %>
