Show express app static text when creating new express app

--- a/app/views/user_keys/express.html.erb
+++ b/app/views/user_keys/express.html.erb
@@ -1,6 +1,6 @@
 <h4>Express Application</h4>
 
-<p>Description about how express app works.</p>
+<%= markdown(Page.find_or_create("x-instructions").message) %>
 
 <br>
 
