Fix for express app header text/sizes

--- a/app/views/user_keys/express.html.erb
+++ b/app/views/user_keys/express.html.erb
@@ -1,4 +1,5 @@
-<h4>Express Application</h4>
+<h1>Express Application</h1>
+<h4>Instructions for Applying</h4>
 
 <%= markdown(Page.find_or_create("x-instructions").message) %>
 
