Add functionality to close button

--- a/app/views/user_keys/form_partials/_express_questions.html.erb
+++ b/app/views/user_keys/form_partials/_express_questions.html.erb
@@ -60,7 +60,7 @@
       <% end %>
     </table>
   <% end %>
-  <button class="right">Done</button>
+  <button data-reveal-id="whitelist-picker" class="right">Done</button>
 </div>
 
 <% content_for :js do %>
