--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -59,8 +59,8 @@
           <div class="s3">
             <%= f.label :time_expired, value: "Expiration Date", class: "prefix" %>
           </div>
-          <div class="s3">
-            <%= f.date_field :time_expired, order: [:month, :day, :year], min_date: Date.today, max_date: 3.years.from_now %>
+          <div class="s3 pull-6">
+            <%= f.date_field :time_expired, order: [:month, :day, :year], min_date: Date.today, max_date: Date.today + 3.years %>
           </div>
         </div>
 
