--- a/app/views/user_keys/show_partials/_admin_only.html.erb
+++ b/app/views/user_keys/show_partials/_admin_only.html.erb
@@ -5,8 +5,8 @@
 
     <%#  Buttons for progressing approval process  %>
     <%= render partial: 'user_keys/show_partials/approval_buttons' %>
-    <%= link_to 'Edit access rights', edit_user_key_path(@user_key), class: "big-button" %> |
-    <%= link_to 'Back to keys list', user_keys_path, class: "big-button secondary" %>
+    | <%= link_to 'Edit access rights', edit_user_key_path(@user_key), class: "big-button" %>
+    | <%= link_to 'Back to keys list', user_keys_path, class: "big-button secondary" %>
     <br/>
 
     <%#  Currently no restrictions exist for delete. %>
@@ -15,7 +15,7 @@
     <%= link_to 'Delete', @user_key, method: :delete,
                  data: { confirm: 'Are you sure? The application will be deleted, and the requester will be notified that their application has been terminated.' }, class: "small-button" %>
     </span>
- 
+
     <%#   Reset is currently only available after submission and before confirmation. %>
     <% if @user_key.at_stage? :awaiting_confirmation or @user_key.at_stage? :awaiting_filters %>
       | <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="This action will send the application back to its requester so that the requester can make changes as needed.
@@ -24,7 +24,7 @@
                  data: { disable_with: "Please Wait..." },
                  data: { confirm: 'Are you sure? The key application and comments will be returned to the requester.' },
                  class: "small-button" %>
-                 
+
         </span>
     <% end %>
   </fieldset>
