--- a/app/views/user_keys/show_partials/_approval_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_approval_buttons.html.erb
@@ -5,19 +5,20 @@
   <%= link_to 'Share key with approvers', set_as_filtered_path(@user_key),
               method: :patch, class: "big-button success",
               data: {disable_with: "Please Wait..." },
-              disabled: !(@user_key.can_be_set_to? :awaiting_confirmation) %> |
+              disabled: !(@user_key.can_be_set_to? :awaiting_confirmation) %>
+  </span>
 
 <% elsif @user_key.at_stage? :awaiting_confirmation %>
 
   <% if @user_key.can_be_set_to? :confirmed %>
-    
+
     <p>This key has been approved by everyone and is ready to be released to the requester.</p>
-    <span class="has-tip tip-top" "data-tooltip aria-haspopup="true" title="This action will activate this key and automatically notify the requester.">
+    <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="This action will activate this key and automatically notify the requester.">
     <%= link_to 'Confirm and release key to user', set_as_confirmed_path(@user_key),
         data: { confirm: 'Are you sure? If you click OK, a confirmation email will be sent to the key requester and this key request will be complete.' },
         data: { disable_with: 'Please wait...' },
         method: :patch, class: "big-button success",
-        disabled: !(@user_key.can_be_set_to? :confirmed) %> |
+        disabled: !(@user_key.can_be_set_to? :confirmed) %>
     </span>
   <% else %>
     <p>This key cannot be released to the requester yet.</p>
