More readable date format

--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -64,7 +64,7 @@
 
   <p>
     <b>Project End Date</b>
-    <span><%= @user_key.time_expired.strftime("%e %b %Y %H:%M:%S%p") %></span>
+    <span><%= @user_key.time_expired.strftime("%d %B %Y") %></span>
   </p>
 
   <p>
