Use HTML5 datepicker as foundation one is bugging out. Change default date format. Fix form url for Express app. Only show express form when editing and NOT admin

--- a/app/views/user_keys/express.html.erb
+++ b/app/views/user_keys/express.html.erb
@@ -5,7 +5,7 @@
 
 <br>
 
-<%= form_for(@user_key, url: express_app_path, method: :post) do |f| %>
+<%= form_for(@user_key, { url: express_app_path, method: :post }) do |f| %>
   <%= render 'shared/error_messages', object: @user_key %>
   <%= render partial: 'user_keys/form_partials/express_questions', locals: {f: f} %>
 
