Add doc pdf and link to it from admin panel

--- a/app/views/home/admin.html.erb
+++ b/app/views/home/admin.html.erb
@@ -22,6 +22,10 @@ to refresh the list of columns known to be used by CollegiateLink. This action i
 <br>
 <br>
 
+<h3><%= link_to 'Admin Documentation/Howto Guide', admin_docs_path %></h3>
+
+<br>
+
 <h3>Long Term Application Questions</h3>
 <fieldset>
   <ol>
