Added to 2017 to copyright in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -29,6 +29,6 @@
 
   <br />
   <div id="copy">
-    &copy; 2015 Carnegie Mellon University &mdash; Information Systems
+    &copy; 2015 - 2017 Carnegie Mellon University &mdash; Information Systems
   </div>
 </footer>
