--- a/app/views/user_keys/show_partials/_documentation.html.erb
+++ b/app/views/user_keys/show_partials/_documentation.html.erb
@@ -14,22 +14,22 @@
 
   <h3> Making A Request to The Bridge API </h3>
   <p> All requests to The Bridge API need to be <code>POST</code> requests with two
-      header fields: <code>andrew_id</code> and <code>api_key</code>. Requests follow the same syntax
+      header fields: <code>andrew_id</code> and <code>api_key</code>. Paremeters are required, but they are passed in the URL rather than in the body of the request. See below for the syntax for passing paramters. Requests follow the same syntax
       as the <a href="http://support.collegiatelink.net/hc/en-us/articles/204033994-Documentation-for-Web-Services-API-Version-2-0-">CollegiateLink API</a>.
-      Only specific endpoints and combinations of parameters are allowed for specific keys, however, as determined by the Student Activities Office. You
-      can check the set of allowed permissions and parameters for your API key by clicking on the above "Permissions" tab.
+      Only specific endpoints and combinations of parameters are allowed for specific keys, however, as determined by the Student Activities Office. In order to make a successful API call, you must include all whitelist filters as parameters for the specific endpoint (table) you are trying to access. You
+      can check the set of allowed permissions and parameters for your API key by clicking on the above "Permissions" tab. When the specified whitelists are included in the request, the request will return the columns specified in "Permitted" under the "Permissions" tab. 
   </p>
   <p> The base URL for making API calls is: <code><%= "#{root_url + 'api/v1/'}" %></code></p>
   <hr/>
-  <h3> Pagination </h3>
+  <h3> Optional: Pagination </h3>
   <p> All API calls can also have two pagination parameters, <code>page</code> and <code>pageSize</code>. <code>page</code>
     is a parameter that determines which page of the overall response will be returned. <code>pageSize</code> will determine how many
-    records will be returned in one response. In order to get all relevant records, an iterator will need to be constructed in
-    client code to repeatedly request specific pages. </p>
+    records will be returned in one response. In order to get all relevant records, an iterator will need to be constructed in your own
+    application code to repeatedly request specific pages. Make sure you include the same page size with each subsequent request so that records are not lost. For example, if page 1 includes 5 records, but page 2 includes 8 records, the first page of the second request (not returned) will also be 8 records, which means that three records will be lost to you. </p>
   <hr />
   <h3> Testing API Credentials </h3>
   <p> For authentication purposes, there is an endpoint named "demo_endpoint" that is useful for simply testing
-      whether a set of credentials is correct </p>
+      whether a set of credentials is correct and your API key is not expired. </p>
 
   <ul class="tabs" data-tab>
     <li class="tab-title active"><a href="#curlTestRequest">curl</a></li>
