Documentation pending user testing

--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -46,7 +46,7 @@
 
         <p><i>Any columns and tables that are selected are available to the user.</i></p>
 
-        <p><i>In order to not return all data to a user, whitelists are required for each table you give the user access to. A "whitelist" is a group of filters. Filters can be added and removed from a whitelist for any specific table on another screen, and you can select from available filters below and add whitelists with different combinations of filters selected. *If you do not include any whitelists or do not select any filters for the whitelist, no user requests will be allowed to that table of data.*
+        <p><i>In order to not return all available data to a user, whitelists are required for each table you give the user access to. A "whitelist" is a group of filters for the available data. Filters can be added and removed from the whitelist for any specific table/endpoint under the "Filters" tab above, and you can select from available filters below and add whitelists with different combinations of filters selected. *If you do not include at least one whitelist or do not select any filters for the only whitelist, no user requests will be allowed to that table/endpoint of data.*
         User requests to an API resource will only be accepted as long as they satisfy (e.g. include all selected filters as parameters in the request URL) all filters for at least one whitelist for the resource.
         Any user request to an API resource that does not satisfy any whitelists for the resource here will be rejected by the system.</i></p>
 
